@@ -176,6 +176,12 @@ If a desk or My Workspace does not have assets of a particular type (stories,
 media, or templates) on it, it will no longer display buttons for them.
 Reported by Scott. [David]
 
+=item *
+
+Fixed the sorting menus for templates on desks. Also fixed them for all assets
+on desks so that sorting on categories sorts by URIs (which are displayed)
+rather than names. Template sorting issues reported by Scot. [David]
+
 =back
 
 =head1 VERSION 1.8.8 (2005-10-27)
